# aca-kmeans

./: CMakeLists.txt  README.md  cluster.h  main.cpp  make-points.py  parallel.cpp  point.h  prepare-project.sh  serial.cpp
input/: 1000-2-blob.txt  1000-3-blob.txt  1000-4-blob.txt  1000-5-blob.txt  10000-2-blob.txt  100000points.txt  10000points.txt  1000points.txt  100points.txt  150000points.txt  150points-1.txt  150points.txt  200000points.txt  30000-2-blob.txt  300000points.txt  300points-1.txt  300points.txt  500-2-blob.txt  500-3-blob.txt  500-4-blob.txt  50000-2-blob.txt  50000points.txt  500points-1.txt  500points.txt  50points.txt  README.md  iris.txt
output/: README.md  gcp-parallel-t.csv  gcp-parallel.csv  gcp-serial.csv  res.txt  runs-exp1.csv  runs-exp2.csv  runs-exp3.csv  runs-exp4L.csv  runs-exp4R.csv  runs-exp5.csv  runs-exp6.csv  runs.csv  runs.txt
scripts/: dataplotter.py  exp1-gcp-stats.py  exp1-stats.py  exp2-stats-gcp.py  exp2-stats.py  exp3-stats.py  exp4-stats.py  exp5-stats.py  exp6-stats-gcp.py  exp6-stats.py  irisloader.py  make-blobs.py  make-points.py  run-stats.py  sklearn-blobs.py  sklearn-kmeans.py
